--- a/src/assets/application.less
+++ b/src/assets/application.less
@@ -6,4 +6,8 @@ body {
   padding: 20px;
   display: inline-block;
   float: right;
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 80%;
 }
