--- a/src/assets/application.less
+++ b/src/assets/application.less
@@ -9,5 +9,8 @@ body {
   z-index: 100;
   position: absolute;
   top: 0;
-  left: 80%;
+  left: 81%;
+}
+.productDetail {
+  background-color: #FFF;
 }
