--- a/src/assets/application.less
+++ b/src/assets/application.less
@@ -14,3 +14,8 @@ body {
 .productDetail {
   background-color: #FFF;
 }
+.error {
+  padding: 1px;
+  border: 2px #F00 solid !important;
+  background-color: #000;
+}
