--- a/src/assets/application.less
+++ b/src/assets/application.less
@@ -19,3 +19,20 @@ body {
   border: 2px #F00 solid !important;
   background-color: #000;
 }
+
+.productVariations {
+  padding: 5px;
+}
+
+.productVariations .item {
+  border: 1px #000 solid;
+  background-color: #CCC;
+  padding-left: 4px !important;
+  padding-right: 4px !important;
+  margin-left: 1px !important;
+  margin-right: 1px;
+}
+
+.productVariations .item.selected {
+  border: 2px #00F solid;
+}
