--- a/src/assets/application.less
+++ b/src/assets/application.less
@@ -2,14 +2,15 @@ body {
   background-color: #c84842 !important;
 }
 .miniCart {
-  background-color: #FFFFFF;
+  background-color: #0F0;
   padding: 20px;
   display: inline-block;
   float: right;
-  z-index: 100;
+  z-index:2147483647;
   position: absolute;
   top: 0;
   left: 81%;
+  border: 1px #000 solid;
 }
 .productDetail {
   background-color: #FFF;
