--- a/src/assets/application.less
+++ b/src/assets/application.less
@@ -1,20 +1,29 @@
+@container_bgcolor:        #fff; // sea blue
+@attribute_bgcolor:        #FFE; // sea blue
+
+
 body {
-  background-color: #c84842 !important;
+  background-color: #b7aa9c !important;
 }
 .miniCart {
-  background-color: #0F0;
+  background-color: #3E3;
   padding: 20px;
   display: inline-block;
   float: right;
   z-index:2147483647;
   position: absolute;
-  top: 0;
+  top: 0.5em;
   left: 81%;
-  border: 1px #000 solid;
+  border: 0.25m #000 solid;
+}
+.miniCart img {
+  float: left;
+  padding-right: 1em;
 }
 .productDetail {
   background-color: #FFF;
 }
+
 .error {
   padding: 1px;
   border: 2px #F00 solid !important;
@@ -27,13 +36,31 @@ body {
 
 .productVariations .item {
   border: 1px #000 solid;
-  background-color: #CCC;
+  background-color: @attribute_bgcolor;
+}
+
+.productVariations .item div {
   padding-left: 4px !important;
   padding-right: 4px !important;
   margin-left: 1px !important;
   margin-right: 1px;
 }
 
+.productVariations .item.attributeName {
+  font-size: 5px;
+}
+
 .productVariations .item.selected {
   border: 2px #00F solid;
+}
+
+.attributeGrid {
+  background-color: @attribute_bgcolor;
+}
+
+.breadcrumbs {
+}
+
+.ui.card {
+  border: .10em #000 solid;
 }
