--- a/src/assets/application.less
+++ b/src/assets/application.less
@@ -6,7 +6,7 @@ body {
   background-color: #b7aa9c !important;
 }
 .miniCart {
-  background-color: #3E3;
+  background-color: #3C3;
   padding: 20px;
   display: inline-block;
   float: right;
@@ -14,7 +14,7 @@ body {
   position: absolute;
   top: 0.5em;
   left: 81%;
-  border: 0.25m #000 solid;
+  border: 0.10em #000 solid;
 }
 .miniCart img {
   float: left;
